--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="container">
     <img class="logo" src="https://raw.githubusercontent.com/RedPato010/MegaFaraon5/main/Logo.png" alt="Logo Mega Faraon" />
     <h1>Accedé al bono de bienvenida exclusivo</h1>
-    <p>Una nueva plataforma digital con beneficios activos por tiempo limitado. No se requiere tarjeta de crédito ni datos bancarios.</p>
+<p>Aprovechá ahora el bono especial y comenzá a jugar con la mejor plataforma digital. Fácil y confiable.</p>
 
     <ul class="checklist">
       <li>Verificación por WhatsApp ✅</li>
