--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
     <p class="counter">Usuarios activos ahora: <span id="counter">132</span></p>
 
-    <a class="btn-wsp" href="https://wa.me/5493564225100?text=Hola%2C+quiero+un+usuario+para+acceder+al+bono+del+30%25+%F0%9F%8E%81" target="_blank" rel="noopener noreferrer">
-      Solicitar acceso desde WhatsApp
-    </a>
+   <a class="btn-wsp" href="https://wa.me/5493564225100?text=Hola%2C+quiero+un+usuario+para+acceder+al+bono+del+30%25+%F0%9F%8E%81" target="_blank" rel="noopener noreferrer">
+  Solicitá tu bono por WhatsApp
+</a>
 
     <div class="footer">Página verificada | Protección de identidad garantizada</div>
   </div>
